--- a/src/input.css
+++ b/src/input.css
@@ -10,7 +10,7 @@
 }
 
 .hero-img {
-	background-image: url('../assets/greg-rivers-rChFUMwAe7E-unsplash.jpg');
+	background-image: url('../assets/front-house.jpg');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
